# cpp_examples

./: .gitignore  README.md
cmake_test/src/: CMakeLists.txt  test_cmake.cpp
exception_and_catch/: main.cpp
make_file_example/: makefile
make_file_example/include/: tm_move_api.h  tm_test.h
make_file_example/src/: main.cpp  tm_move_api.cpp  tm_test.cpp
make_file_example/test/: makefile  string_compare.cpp  use_gcc_build_cmd
rule_of_five/: makefile  rule_of_five.cpp
smart_pointer/: makefile  shared_ptr.cpp  unique_ptr.cpp
tcp_ip_linux/: client.cpp  makefile  server.cpp
test_delete_older_file/: CMakeLists.txt
test_delete_older_file/src/: test.cpp
test_shared_memory/: client.cpp  makefile  server.cpp
test_smart_pointer/: test_smart_pointer_shared_ptr.cpp
test_smart_pointer_2/: test_smart_pointer_shared_ptr.cpp  test_smart_pointer_unique_ptr.cpp
valgrind_liinux_memory_leak/: makefile  test_memory_leak.cpp
yaml_test/: CMakeLists.txt  robot.yaml  yaml_read.cpp
